<resources>

    <string name="app_name">Cloudit</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_start">Cloudit</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="welcomeString">Loadin\' your stuff.</string>
    <string name="empty_list">You haven\'t uploaded any files.\nGo ahead, do it!</string>
    <string name="title">Title</string>
    <string name="url">URL</string>
    <string name="copylink">Copy Link</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="send_to">Send to</string>
    <string name="cloudapp_account">CloudApp account</string>
    <string name="settings">Settings</string>
    <string name="upload">Upload</string>
    <string name="save_to_clipboard">Save a link to clipboard after every upload?</string>
    <string name="clipboard">Save to clipboard?</string>
    <string name="signUp">Sign up for CloudApp</string>
    <string name="login_logo_description">Cloudit Logo</string>
    <string name="image_compression">Quality of image when uploading.</string>
    <string name="compression">Image Compression</string>
    <string name="default_image_compression">None</string>

</resources>