<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/splash_gradient"
    android:descendantFocusability="beforeDescendants"
    android:fadingEdge="none"
    android:fillViewport="true"
    android:focusableInTouchMode="true" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/loginLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/splash_logo_top_margin"
            android:layout_marginBottom="@dimen/splash_logo_bottom_margin"
            android:layout_weight="0"
            android:src="@drawable/login_logo" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginLogo"
            android:layout_marginLeft="15.0dip"
            android:layout_marginRight="15.0dip"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10.0dip" >

            <EditText
                android:id="@+id/emailField"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4.0dip"
                android:layout_marginTop="10.0dip"
                android:background="@drawable/textfield_selector"
                android:fadingEdgeLength="0.0dip"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="#ffffffff"
                android:textColorHint="#ff88cee7"
                android:textCursorDrawable="@null"
                android:textSize="18.0sp" />

            <EditText
                android:id="@+id/passwordField"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15.0dip"
                android:layout_marginTop="5.0dip"
                android:background="@drawable/textfield_selector"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textColor="#ffffffff"
                android:textColorHint="#ff88cee7"
                android:textCursorDrawable="@null"
                android:textSize="18.0sp" />

            <Button
                android:id="@+id/loginButton"
                style="@style/splashButton"
                android:layout_width="fill_parent"
                android:layout_height="46.0dip"
                android:layout_marginTop="5.0dip"
                android:layout_marginBottom="5.0dip"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/btn_splash_text_color"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/signUp"
            android:textColor="@android:color/white"
            android:layout_gravity="right"
            android:layout_marginRight="27.0dip"
            android:layout_marginBottom="10.0dip" />
    </LinearLayout>

</ScrollView>